# CV-Parser

./: README.md  cv_summary.txt  pyproject.toml  requirements.txt
src/cv_analysis_crewai/: crew.py  main.py
src/cv_analysis_crewai/config/: agents.yaml  tasks.yaml
